section-3:(padding fix on mobile view)

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -1244,7 +1244,7 @@
 
 		#notify {
 				overflow: visible;
-				height: auto;
+				height: 475px;
 				background: #f4f8f9;
 		}
 
